Update content/teams/2025-10-26-adnan.md (via Pages CMS)

--- a/content/teams/2025-10-26-adnan.md
+++ b/content/teams/2025-10-26-adnan.md
@@ -1,6 +1,8 @@
 ---
-title: Adnan
-role: admin
-image: /content/images/Screenshot 2025-08-01 215323.png
+title: Syed Adnan Rahman
+role: CTO
+image: /content/images/WhatsApp Image 2025-10-28 at 13.03.50.jpeg
+tags:
+  - CTO
 ---
-BRACU
+CTO of BioNova
