Update content/articles/2025-11-08-kkk.md (via Pages CMS)

--- a/content/articles/2025-11-08-kkk.md
+++ b/content/articles/2025-11-08-kkk.md
@@ -1,16 +1,8 @@
 ---
-title: kkk
+title: placeholder
 date: 2025-11-08
 author: adnan
-image: /content/images/1000033105.jpg
+tags:
+  - placeholder
 ---
-# hello guys
-
-*   lazy
-    
-*   buy
-    
-
-### uyhuihny
-
-![](/content/images/Screenshot%202025-08-01%20215323.png)
+Placeholder
