--- a/content/services/2025-10-27-student.md
+++ b/content/services/2025-10-27-student.md
@@ -1,9 +1,11 @@
 ---
-title: student
-image: /content/images/Screenshot 2025-10-28 184418.png
+title: Student  
 ---
-BioNova is a sustainability-focused social enterprise transforming agricultural waste into clean bioethanol fuel for rural Bangladesh. Founded by BRAC University alumni, the venture addresses the twin challenges of crop residue burning and rural energy poverty by deploying decentralized micro-refineries that convert residues like rice husks and sugarcane bagasse into bioethanol through enzymatic hydrolysis and fermentation.
+This is the first paragraph that will appear as an excerpt.
 
-Each BioNova mini-plant produces affordable, high-purity ethanol for clean cooking and local industry while creating jobs for rural youth and women through a micro-franchise model. The project aims to cut greenhouse gas emissions by up to 70%, reduce open burning of 1.2 million tons of waste, and create over 10,000 rural jobs by 2030.
+This is the second paragraph, which will only appear after clicking "Read More".
 
-Key partnerships are being developed with BRAC and SREDA, and BioNova’s first pilot hub is being launched in Bogura District. The startup aligns directly with SDGs 7 (Affordable and Clean Energy), 8 (Decent Work and Economic Growth), 12 (Responsible Consumption and Production), and 13 (Climate Action).
+- List item one
+- List item two
+
+**Bold text** and *italic* also work.
