--- a/content/teams/2025-10-28-adiat.md
+++ b/content/teams/2025-10-28-adiat.md
@@ -1,6 +1,7 @@
 ---
-title: Mahfuza Amir Ela
-role: Co-Founder, Head of Content & Marketing
-image: /content/images/Screenshot 2025-12-18 112911.png
+title: "Md. Sayedur Rahman "
+role: Founder, Head of Operations and Administration
+image: /content/images/Screenshot 2025-12-17 140906.png
 ---
-Mahfuza Amir Ela  is a student of Department of Sociology at the University of Dhaka and the Co-Founder of Youth Climate Insight Bangladesh. She is actively working on research programs and has a strong focus on women's justice, climate action, and youth democracy. Ela has completed numerous internships and fellowships, including the prestigious United Nations Millennium Fellowship, while serving as an Executive, Co-Lead and Lead in many prominent organizations. She also writes for The Business Standard.
+Md. Sayedur Rahman is a debater, columnist, and student of Institute of Disaster Management and Vulnerability Studies  at the University of Dhaka and founder of YCI Bangladesh. With strong research interests and experience in idea development, he actively engages in academic and social initiatives. His work reflects a commitment to critical thinking, community resilience, and innovative approaches to disaster preparedness and awareness.
+
