--- a/content/teams/2025-11-03-akib.md
+++ b/content/teams/2025-11-03-akib.md
@@ -1,6 +1,9 @@
 ---
-title: "Jeba Maliha "
-role: Co-Founder, Head of Communication & Outreach
-image: /content/images/WhatsApp Image 2025-12-17 at 00.01.13.jpeg
+title: Mahfuza Amir Ela
+role: Co-Founder, Head of Content & Marketing
+image: /content/images/Screenshot 2025-12-18 112911.png
 ---
-Jeba Maliha, the Co-Founder and Head of Communication & Outreach at YCI Bangladesh, currently studying at the Institute of Disaster Management and Vulnerability Studies, University of Dhaka. She is dedicated to advancing climate resilience and youth leadership. With a strong creative vision, she aims to contribute to impactful development initiatives for climate-vulnerable communities in Bangladesh.
+Mahfuza Amir Ela  is a student of Department of Sociology at the University of Dhaka and the Co-Founder of Youth Climate Insight Bangladesh. She is actively working on research programs and has a strong focus on women's justice, climate action, and youth democracy. Ela has completed numerous internships and fellowships, including the prestigious United Nations Millennium Fellowship, while serving as an Executive, Co-Lead and Lead in many prominent organizations. She also writes for The Business Standard.
+
+
+
